--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/style.css" />
+    <script src="https://kit.fontawesome.com/b335962bf2.js"></script>
   </head>
   <body>
     <header>
@@ -63,18 +64,214 @@
         </nav>
       </div>
 
-      <div class="container text-centre">
+      <div class="container text-center">
         <div class="row">
           <div class="col-md-7 col-sm-12">
             <h6>AUTHOR: CODWAV DYNAMICS</h6>
             <h1>EXCITING ADVENTURE</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla,
+              repellendus. Asperiores cupiditate, doloremque incidunt facilis
+              nam voluptatibus perspiciatis ipsa maiores?
+            </p>
+            <button class="btn btn-light px-5 py-2">Buy Now</button>
           </div>
-          <div class="col-md-5 col-sm-12"></div>
+          <div class="col-md-5 col-sm-12 h-25">
+            <img src="../assets/header-img.jpg" alt="Books" />
+          </div>
         </div>
       </div>
     </header>
 
-    <main></main>
+    <main>
+      <section class="section1">
+        <div class="container text-center">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="pray">
+                <img src="../assets/pray-img.jpg" alt="Pray" />
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="panel text-left">
+                <h1>Mr. Robin Fortune</h1>
+                <p class="pt-4">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Officia ex minus nesciunt ut, veritatis aspernatur nam
+                  dignissimos recusandae deserunt ipsum!
+                </p>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Maxime numquam veritatis facere magnam voluptate eaque
+                  doloremque saepe necessitatibus soluta atque, et eos nisi.
+                  Cupiditate, id!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-2 container-fluid p-0">
+        <div class="cover">
+          <div class="content text-center">
+            <h1>
+              Some Features That Made us Unique
+            </h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga,
+              possimus!
+            </p>
+          </div>
+        </div>
+        <div class="container-fluid text-center">
+          <div
+            class="numbers d-flex flex-md-row flex-wrap justify-content-center"
+          >
+            <div class="rect">
+              <h1>4567</h1>
+              <p>Happy Clients</p>
+            </div>
+            <div class="rect">
+              <h1>5678</h1>
+              <p>Coffees</p>
+            </div>
+            <div class="rect">
+              <h1>2845</h1>
+              <p>Tickets Submitted</p>
+            </div>
+            <div class="rect">
+              <h1>7436</h1>
+              <p>Total Projects</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="purchase text-center">
+          <h1>Purchase Whatever You Want</h1>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+          <div class="cards">
+            <div class="d-flex flex-row justify-content-center flex-wrap">
+              <div class="card">
+                <div class="card-body">
+                  <div class="title">
+                    <h5 class="card-title">PDF</h5>
+                  </div>
+                  <p class="card-text">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Magnam?
+                  </p>
+                  <h1>$59.99</h1>
+                  <a class="btn btn-dark px-5 py-2 mb-5" href="#"
+                    >Purchase Now</a
+                  >
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-body">
+                  <div class="title">
+                    <h5 class="card-title">E-Book</h5>
+                  </div>
+                  <p class="card-text">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Magnam?
+                  </p>
+                  <h1>$29.99</h1>
+                  <a class="btn btn-dark px-5 py-2 mb-5" href="#"
+                    >Purchase Now</a
+                  >
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-body">
+                  <div class="title">
+                    <h5 class="card-title">Printed Copy</h5>
+                  </div>
+                  <p class="card-text">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Magnam?
+                  </p>
+                  <h1>$89.99</h1>
+                  <a class="btn btn-dark px-5 py-2 mb-5" href="#"
+                    >Purchase Now</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <Section class="section-3 p-0 text-center">
+        <div class="row">
+          <div class="col-md-12 col-sm-12">
+            <h1>Download Our App</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum
+              pariatur laborum, error officia incidunt, ipsum voluptatum aperiam
+              earum, cumque quas nobis? Necessitatibus magnam maiores assumenda?
+            </p>
+          </div>
+        </div>
+        <div class="platform row">
+          <div class="col-md-6 col-sm-6 text-right">
+            <div class="desktop shadow">
+              <div class="d-flex flex-row justify-content-center">
+                <i class="fas fa-desktop fa-3x py-2 pr-3"></i>
+                <div class="text text-left">
+                  <h3 class="pt-1 m-0">Desktop</h3>
+                  <p class="p-0 m-0">On Website</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-6 text-left">
+            <div class="desktop shadow">
+              <div class="d-flex flex-row justify-content-center">
+                <i class="fas fa-mobile-alt fa-3x py-2 pr-3"></i>
+                <div class="text text-left">
+                  <h3 class="pt-1 m-0">On Mobile</h3>
+                  <p class="p-0 m-0">On Playstore</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </Section>
+
+      <section class="section-4">
+        <div class="container text-center">
+          <h1 class="dark">What our Reader's Say About us</h1>
+          <p text-secondary>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="team row">
+          <div class="col-md-4 col-sm-12 text-center">
+            <div class="card">
+              <div class="card-img-top">
+                <img src="../assets/Joe.jpg" alt="Joe" class="img-fluid" />
+              </div>
+              <div class="card-body">
+                <h3 class="card-title">Joe Smith</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                  aperiam, ipsum soluta et temporibus in fugit vitae dolor
+                  facilis quis, quaerat at sed debitis. Eum possimus similique
+                  cumque sunt, repellendus molestias quidem consequatur.
+                </p>
+                <a href="#" class="text-secondary text-decoration-none"
+                  >Go Somewhere</a
+                >
+                <p class="black-50">CEO at Code DYNAMICS</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4"></div>
+          <div class="col-md-4"></div>
+        </div>
+      </section>
+    </main>
 
     <footer></footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
