html almost completed

--- a/src/index.html
+++ b/src/index.html
@@ -248,7 +248,7 @@
         </div>
         <div class="team row">
           <div class="col-md-4 col-sm-12 text-center">
-            <div class="card">
+            <div class="card mr-2 d-inline-block shadow-lg">
               <div class="card-img-top">
                 <img src="../assets/Joe.jpg" alt="Joe" class="img-fluid" />
               </div>
@@ -267,13 +267,141 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4"></div>
-          <div class="col-md-4"></div>
+          <div class="col-md-4 col-sm-12">
+            <!--Carousal started-->
+            <div
+              id="carouselExampleSlidesOnly"
+              class="carousel slide"
+              data-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active text-center">
+                  <!--Card-2-->
+                  <div class="card mr-2 d-inline-block shadow-lg">
+                    <div class="card-img-top">
+                      <img
+                        src="../assets/George.jpg"
+                        alt="George"
+                        class="img-fluid"
+                      />
+                    </div>
+                    <div class="card-body">
+                      <h3 class="card-title">George Ramsay</h3>
+                      <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Nemo aperiam, ipsum soluta et temporibus in fugit vitae
+                        dolor facilis quis, quaerat at sed debitis. Eum possimus
+                        similique cumque sunt, repellendus molestias quidem
+                        consequatur.
+                      </p>
+                      <a href="#" class="text-secondary text-decoration-none"
+                        >Go Somewhere</a
+                      >
+                      <p class="black-50">CEO at DigitaWeb</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item text-center">
+                  <!--Card-3-->
+                  <div class="card mr-2 d-inline-block shadow-lg">
+                    <div class="card-img-top">
+                      <img
+                        src="../assets/Nichole.jpg"
+                        alt="Nichole"
+                        class="img-fluid"
+                      />
+                    </div>
+                    <div class="card-body">
+                      <h3 class="card-title">Nichole Willson</h3>
+                      <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Nemo aperiam, ipsum soluta et temporibus in fugit vitae
+                        dolor facilis quis, quaerat at sed debitis. Eum possimus
+                        similique cumque sunt, repellendus molestias quidem
+                        consequatur.
+                      </p>
+                      <a href="#" class="text-secondary text-decoration-none"
+                        >Go Somewhere</a
+                      >
+                      <p class="black-50">CEO at DigiPluto</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-12 text-center">
+            <!--Card-4-->
+            <div class="card mr-2 d-inline-block shadow-lg">
+              <div class="card-img-top">
+                <img src="../assets/Adam.jpg" alt="Adam" class="img-fluid" />
+              </div>
+              <div class="card-body">
+                <h3 class="card-title">Adam Moorey</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                  aperiam, ipsum soluta et temporibus in fugit vitae dolor
+                  facilis quis, quaerat at sed debitis. Eum possimus similique
+                  cumque sunt, repellendus molestias quidem consequatur.
+                </p>
+                <a href="#" class="text-secondary text-decoration-none"
+                  >Go Somewhere</a
+                >
+                <p class="black-50">CEO at WebbitCo</p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="container p-0">
+        <div class="row text-left">
+          <div class="col-md-5">
+            <h1 class="text-light">About Us</h1>
+            <p class="text-muted">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt
+              adipisci odit rerum necessitatibus eos.
+            </p>
+            <p class="text-muted pt-4">
+              Copyright &copy;2019 All rights reserved | This is developed by
+              <span>www.codwav.com</span>
+            </p>
+          </div>
+          <div class="col-md-5">
+            <h4 class="text-light">Newsletter</h4>
+            <p class="text-muted">Stay updated</p>
+            <form class="form-inline">
+              <div class="col pl-0">
+                <div class="input-group pr-5">
+                  <input
+                    type="text"
+                    class="form-control bg-dark text-white"
+                    placeholder="Email"
+                  />
+                  <div class="input-group-prepend">
+                    <div class="input-group-text">
+                      <i class="fas fa-arrow-right"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="col-md-2 col-sm-12">
+            <h4 class="text-light">Follow Us</h4>
+            <p class="text-muted">Let us be social</p>
+            <div class="column">
+              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-instagram"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-youtube"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
