--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,10 @@
     <header>
       <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg">
-          <a class="navbar-brand" href="#">Books</a>
+          <a class="navbar-brand" href="#">
+            <i class="fas fa-book-reader fa-3x mx-3"></i>
+            Books</a
+          >
           <button
             class="navbar-toggler"
             type="button"
@@ -50,7 +53,7 @@
               <li class="nav-item dropdown">
                 <div class="dropdown">
                   <a class="nav-link" href="#">Pages</a>
-                  <div class="dropdwon-content">
+                  <div class="dropdown-content">
                     <a href="#">Generic</a>
                     <a href="#">Element</a>
                   </div>
