--- a/src/index.html
+++ b/src/index.html
@@ -253,7 +253,11 @@
           <div class="col-md-4 col-sm-12 text-center">
             <div class="card mr-2 d-inline-block shadow-lg">
               <div class="card-img-top">
-                <img src="../assets/Joe.jpg" alt="Joe" class="img-fluid" />
+                <img
+                  src="../assets/Joe.jpg"
+                  alt="Joe"
+                  class="img-fluid border-radius"
+                />
               </div>
               <div class="card-body">
                 <h3 class="card-title">Joe Smith</h3>
@@ -285,7 +289,7 @@
                       <img
                         src="../assets/George.jpg"
                         alt="George"
-                        class="img-fluid"
+                        class="img-fluid border-radius"
                       />
                     </div>
                     <div class="card-body">
@@ -311,7 +315,7 @@
                       <img
                         src="../assets/Nichole.jpg"
                         alt="Nichole"
-                        class="img-fluid"
+                        class="img-fluid border-radius"
                       />
                     </div>
                     <div class="card-body">
@@ -337,7 +341,11 @@
             <!--Card-4-->
             <div class="card mr-2 d-inline-block shadow-lg">
               <div class="card-img-top">
-                <img src="../assets/Adam.jpg" alt="Adam" class="img-fluid" />
+                <img
+                  src="../assets/Adam.jpg"
+                  alt="Adam"
+                  class="img-fluid border-radius"
+                />
               </div>
               <div class="card-body">
                 <h3 class="card-title">Adam Moorey</h3>
