Styled for the responsivness

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/mobile-style.css" />
+
     <script src="https://kit.fontawesome.com/b335962bf2.js"></script>
   </head>
   <body>
@@ -31,7 +33,7 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <span class="navbar-toggler-icon"></span>
+            <i class="fas fa-align-right text-right"></i>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <div class="mr-auto"></div>
